# nx-firewall

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
backends/: CMakeLists.txt  IptablesRuleGenerator.cpp  IptablesRuleGenerator.h  IptablesRulesComposer.cpp  IptablesRulesComposer.h
entities/: CMakeLists.txt  Firewall.cpp  Firewall.h  NetFilterTool.cpp  NetFilterTool.h  QVariantRuleSetConverter.cpp  QVariantRuleSetConverter.h  Rule.cpp  Rule.h  RuleSet.cpp  RuleSet.h  Service.cpp  Service.h  SettingsManager.h  ThreeStepsFirewall.cpp  ThreeStepsFirewall.h
gateways/: CMakeLists.txt  Iptables.cpp  Iptables.h  IptablesRuleGenerator.cpp  IptablesRuleGenerator.h  JsonSettings.cpp  JsonSettings.h  NetworkFilteringManagementTool.h  QVariantRuleSetConverter.cpp  QVariantRuleSetConverter.h
kcm/: nomadfirewallkcm.cpp  nomadfirewallkcm.h
kcm/package/contents/ui/: main.qml
plugins/: CMakeLists.txt
plugins/firewall/: CMakeLists.txt  ModuleController.cpp  ModuleController.h  NomadFirewallQmlPlugin.cpp  NomadFirewallQmlPlugin.h  RuleListModel.cpp  RuleListModel.h  SettingsManagerKauthInterface.cpp  SettingsManagerKauthInterface.h
plugins/firewall/helper/: NomadFirewallKAuthHelper.cpp  NomadFirewallKAuthHelper.h  org.nomad.firewall.actions
plugins/three_steps_firewall/: CMakeLists.txt  MFWQmlPlugin.cpp  MFWQmlPlugin.h  ModuleController.cpp  ModuleController.h  NetFilterToolKauthInterface.cpp  NetFilterToolKauthInterface.h  NomadFirewallQmlPlugin.cpp  RuleListModel.cpp  RuleListModel.h  SettingsManagerKauthInterface.cpp  qmldir
plugins/three_steps_firewall/helper/: CMakeLists.txt  MFW_helper.cpp  MFW_helper.h  NomadFirewallKAuthHelper.cpp  NomadFirewallKAuthHelper.h  org.maui.mfw.actions  org.nomad.firewall.actions
service/: CMakeLists.txt  main.cpp  org.maui.mfw.service  org.nomad.firewall.service
snap/: snapcraft.yaml
test/: CMakeLists.txt  TestEntities.cpp  TestFirewall.cpp  TestIptables.cpp  TestIptablesRuleGenerator.cpp  TestIptablesRulesComposer.cpp  TestQVariantRuleSetConverter.cpp  TestTreeStepsFirewall.cpp
test/testMFWQmlPlugin/: CMakeLists.txt  TestKAuthHelper.cpp  test.qml  test.qmlc  test2.qml  testMFWQmlPlugin.cpp
test/testNomadFirewallQmlPlugin/: CMakeLists.txt  TestKAuthHelper.cpp  test.qml  test2.qml  test3.qml  testNomadFirewallQmlPlugin.cpp
